# github-batch-analytics

./: .env.sample  .env.spark.sample  .envrc.sample  .gitignore  .sqlfluff  Dockerfile  Dockerfile.jupyter  Makefile  README.md  docker-compose.yaml  pyproject.toml  render.yaml
.dlt/: config.toml  secrets.sample.toml
.github/workflows/: ci.yml  dag.yml  helm.yml  terraform.yml
.streamlit/: secrets.sample.toml
dags/: example_dag.py  github_analysis.py
dags/gba/services/: build_aggregates.py  build_candidates.py  build_curated_marts.py  build_dashboard_views.py  download_github_archive.py  materialize_bucketed_marts.py  parse_flatten.py  utils.py
dags/gba/settings/: build_aggregates.py  build_candidates.py  build_curated_marts.py  build_dashboard_views.py  enrich_candidates.py  enums.py  get_archive.py  materialize_bucketed_marts.py  parse_flatten.py
dags/gba/tasks/: build_aggregates.py  build_candidates.py  build_dashboard_views.py  build_marts.py  enrich_candidates.py  get_archive.py  materialize_bucketed_marts.py  parse_flatten_events.py  spark_conf.py
dashboards/: app.py  config.py  data.py
dashboards/pages/: 1_repository.py  2_organization.py  3_common.py
infra/scripts/: build_and_push_image.sh  deploy_app.sh  deploy_infra.sh
infra/terraform/: README.md  athena.tf  athena_tables.tf  backend.hcl.example  ecr.tf  eks.tf  github_actions_iam.tf  github_actions_repo_config.tf  github_provider.tf  iam_irsa.tf  main.tf  outputs.tf  rds.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
notebooks/: 3_build_aggregates_org.ipynb  3_build_candidates_org.ipynb  3_build_candidates_repo.ipynb  4_build_candidates.ipynb  6_write_warehouse.ipynb  README.md  __init__.py  spark_cluster_playground.ipynb  spark_session.py
spark/jobs/: parse_flatten.py
tests/: conftest.py
tests/integration/: test_build_aggregates_task_integration.py  test_build_candidates_task_integration.py  test_build_marts_task_integration.py  test_download_github_archive_integration.py  test_get_archive_task_integration.py  test_github_analysis_dag_integration.py  test_parse_flatten_events_task_integration.py  test_parse_flatten_service_integration.py
tests/unit/: test_build_aggregates_service.py  test_build_candidates_service.py  test_build_curated_marts_service.py  test_build_dashboard_views_service.py  test_download_github_archive.py  test_get_archive_task.py  test_materialize_bucketed_marts_service.py  test_organization_enrichment_service.py  test_parse_flatten_events_task.py  test_parse_flatten_service.py  test_repository_enrichment_service.py
(+68 files in other folders)
