[project]
name = "github-batch-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "apache-airflow[amazon,postgres]>=3.1.7",
    "apache-airflow-providers-apache-spark>=5.3.3",
    "boto3>=1.42.60",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "boto3-stubs[full]>=1.42.63",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "moto[s3]>=5.1.15",
    "pyspark==3.5.4",
    "pytest>=8.4.2",
    "ruff>=0.15.5",
    "ty>=0.0.20",
]

[tool.pyright]
extraPaths = ["dags"]

[tool.ty.environment]
extra-paths = ["./dags"]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
markers = [
    "unit: unit test marker",
    "integration: integration test marker",
]
